log
Sat, May  3, 2025 10:51:53 PM: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:40:55: error: expected ',' or ';' before ':' token
     TreeMap* new = (TreeMap*) malloc(sizeof(TreeMap)) :
                                                       ^
5729e4d
Sat, May  3, 2025 10:52:02 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a9901d1
